--- a/src/pages/styles/BadgeNew.css
+++ b/src/pages/styles/BadgeNew.css
@@ -5,4 +5,10 @@
   background-repeat: repeat;
   margin-bottom: 1rem;
   color: #ffffff;
+  display: flex;
+  justify-content: center;
+}
+
+.BadgeNew__hero-img{
+  max-height: 100px;
 }
